Pointed globals sample to local jQuery.

--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -50,7 +50,7 @@
 
     </div>
 
-    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../../bootstrap-slider.js"></script>
     <script src="sample.js"></script>
 
