Added build system.

--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -6,8 +6,8 @@
     <title>Bootstrap Slider with jQuery</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="../../slider.css">
-    <link rel="stylesheet" href="../../slider-handles.css">
+    <link rel="stylesheet" href="../../dist/css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="../../dist/css/bootstrap-slider-handles.min.css">
     <style>
         .list-group {
             margin-bottom: 0;
@@ -51,7 +51,7 @@
     </div>
 
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../bootstrap-slider.js"></script>
+    <script src="../../dist/js/bootstrap-slider.min.js"></script>
     <script src="sample.js"></script>
 
 </body>
