--- a/examples/amd/index.html
+++ b/examples/amd/index.html
@@ -6,8 +6,8 @@
     <title>Bootstrap Slider with RequireJS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="../../slider.css">
-    <link rel="stylesheet" href="../../slider-handles.css">
+    <link rel="stylesheet" href="../../dist/css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="../../dist/css/bootstrap-slider-handles.min.css">
     <style>
         .list-group {
             margin-bottom: 0;
