--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -38,9 +38,29 @@
                         <input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
                     </li>
                     <li class="list-group-item">
+                        <h3>Single Selection</h3>
+                        <p>Width: 100%, Value: 0-100, step: 5, initial value: 10</p>
+                        <input type="text" value="" data-slider-width="100%" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
+                    </li>
+                    <li class="list-group-item">
                         <h3>Range Selection</h3>
                         <p>Range 0-100, step: 5, initial range: 50 : 80</p>
                         <input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
+                    </li>
+                    <li class="list-group-item">
+                        <h3>Single Selection (Vertical)</h3>
+                        <p>Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
+                        <input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
+                    </li>
+                    <li class="list-group-item">
+                        <h3>Single Selection (Vertical)</h3>
+                        <p>Height: 50px, Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
+                        <input type="text" value="" data-slider-height="50px" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
+                    </li>
+                    <li class="list-group-item">
+                        <h3>Range Selection (Vertical)</h3>
+                        <p>Orientation: vertical, Range 0-100, step: 5, initial range: 50 : 80</p>
+                        <input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
                     </li>
                 </ul>
 
