--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -2,77 +2,91 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Bootstrap Slider with jQuery</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="../../dist/css/bootstrap-slider.min.css">
-    <link rel="stylesheet" href="../../dist/css/bootstrap-slider-handles.min.css">
-    <style>
-        .list-group {
-            margin-bottom: 0;
-        }
-    </style>
+	<meta charset="UTF-8">
+	<title>Bootstrap Slider with jQuery</title>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+	crossorigin="anonymous">
+	<link rel="stylesheet" href="../../dist/css/bootstrap-slider.min.css">
+	<link rel="stylesheet" href="../../dist/css/bootstrap-slider-handles.min.css">
+	<style>
+		.list-group {
+			margin-bottom: 0;
+		}
+	</style>
 </head>
 
 <body>
 
-    <div class="container">
+	<div class="container">
 
-        <div class="page-header">
-            <h1>Bootstrap Slider<small> with jQuery</small></h1>
-        </div>
+		<div class="page-header">
+			<h1>Bootstrap Slider<small> with jQuery</small></h1>
+		</div>
 
-        <div class="panel panel-default">
+		<div class="panel panel-default">
 
-            <div class="panel-heading">
-                <h3 class="panel-title">Sample Sliders</h3>
-            </div>
+			<div class="panel-heading">
+				<h3 class="panel-title">Sample Sliders</h3>
+			</div>
 
-            <div class="panel-body">
+			<div class="panel-body">
 
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <h3>Single Selection</h3>
-                        <p>Value: 0-100, step: 5, initial value: 10</p>
-                        <input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
-                    </li>
-                    <li class="list-group-item">
-                        <h3>Single Selection</h3>
-                        <p>Width: 100%, Value: 0-100, step: 5, initial value: 10</p>
-                        <input type="text" value="" data-slider-width="100%" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
-                    </li>
-                    <li class="list-group-item">
-                        <h3>Range Selection</h3>
-                        <p>Range 0-100, step: 5, initial range: 50 : 80</p>
-                        <input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
-                    </li>
-                    <li class="list-group-item">
-                        <h3>Single Selection (Vertical)</h3>
-                        <p>Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
-                        <input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
-                    </li>
-                    <li class="list-group-item">
-                        <h3>Single Selection (Vertical)</h3>
-                        <p>Height: 50px, Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
-                        <input type="text" value="" data-slider-height="50px" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
-                    </li>
-                    <li class="list-group-item">
-                        <h3>Range Selection (Vertical)</h3>
-                        <p>Orientation: vertical, Range 0-100, step: 5, initial range: 50 : 80</p>
-                        <input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
-                    </li>
-                </ul>
+				<ul class="list-group">
+					<li class="list-group-item">
+						<h3>Single Selection</h3>
+						<p>Value: 0-100, step: 5, initial value: 10</p>
+						<input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10" data-slider-handle="square">
+					</li>
+					<li class="list-group-item">
+						<h3>Single Selection</h3>
+						<p>Width: 100%, Value: 0-100, step: 5, initial value: 10</p>
+						<input type="text" value="" data-slider-width="100%" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10"
+						data-slider-handle="square">
+					</li>
+					<li class="list-group-item">
+						<h3>Range Selection</h3>
+						<p>Range 0-100, step: 5, initial range: 50 : 80</p>
+						<input type="text" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
+					</li>
+					<li class="list-group-item">
+						<h3>Range Selection (*unusual range)</h3>
+						<p>Range 0-0, step: 0, initial range: 0</p>
+						<input type="slider" value="0" data-slider-min="0" data-slider-max="0" data-slider-step="0">
+					</li>
+					<li class="list-group-item">
+						<h3>Single Selection (Vertical)</h3>
+						<p>Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
+						<input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5"
+						data-slider-value="10" data-slider-handle="square">
+					</li>
+					<li class="list-group-item">
+						<h3>Single Selection (Vertical)</h3>
+						<p>Height: 50px, Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
+						<input type="text" value="" data-slider-height="50px" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100"
+						data-slider-step="5" data-slider-value="10" data-slider-handle="square">
+					</li>
+					<li class="list-group-item">
+						<h3>Range Selection (Vertical)</h3>
+						<p>Orientation: vertical, Range 0-100, step: 5, initial range: 50 : 80</p>
+						<input type="text" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5"
+						data-slider-value="[50,80]">
+					</li>
+					<li class="list-group-item">
+						<h3>Range Selection (*unusual range)</h3>
+						<p>Orientation: vertical, Range 0-0, step: 0, initial range: 0</p>
+						<input type="slider" value="0" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="0" data-slider-step="0">
+					</li>
+				</ul>
 
-            </div>
+			</div>
 
-        </div>
+		</div>
 
-    </div>
+	</div>
 
-    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap-slider.min.js"></script>
-    <script src="sample.js"></script>
+	<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="../../dist/js/bootstrap-slider.min.js"></script>
+	<script src="sample.js"></script>
 
 </body>
 
