--- a/examples/amd/index.html
+++ b/examples/amd/index.html
@@ -52,6 +52,11 @@
 						<input type="slider" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="[50,80]">
 					</li>
 					<li class="list-group-item">
+						<h3>Range Selection</h3>
+						<p>Range 0-1.44, step: 0.25, initial range: 0 : 1.44</p>
+						<input type="slider" value="0,1.449" data-slider-min="0" data-slider-max="1.449" data-slider-step="0.25" data-slider-value="[0,1.449]">
+					</li>
+					<li class="list-group-item">
 						<h3>Range Selection (*unusual range)</h3>
 						<p>Range 0-200, step: 6, initial range: 0 : 0</p>
 						<input type="slider" value="0,0" data-slider-min="0" data-slider-max="200" data-slider-step="6" data-slider-value="[0,0]">
