Fixed formatting issue. Bumping to v2.1.5.

--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -53,6 +53,11 @@
 						<input type="slider" value="0,1.449" data-slider-min="0" data-slider-max="1.449" data-slider-step="0.25" data-slider-value="[0,1.449]">
 					</li>
 					<li class="list-group-item">
+						<h3>Range Selection</h3>
+						<p>Range 0-90997.2, step: 2275, initial range: 0 : 90997.2</p>
+						<input type="slider" value="0,90997.2" data-slider-min="0" data-slider-max="90997.2" data-slider-step="2275" data-slider-value="[0,90997.2]">
+					</li>
+					<li class="list-group-item">
 						<h3>Range Selection (*unusual range)</h3>
 						<p>Range 0-200, step: 6, initial range: 0 : 0</p>
 						<input type="slider" value="0,0" data-slider-min="0" data-slider-max="200" data-slider-step="6" data-slider-value="[0,0]">
@@ -78,7 +83,8 @@
 					<li class="list-group-item">
 						<h3>Range Selection (*unusual range)</h3>
 						<p>Orientation: vertical, Range 0-200, step: 6, initial range: 0 : 0</p>
-						<input type="slider" value="0,0" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="200" data-slider-step="6" data-slider-value="[0,0]">
+						<input type="slider" value="0,0" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="200" data-slider-step="6"
+							data-slider-value="[0,0]">
 					</li>
 				</ul>
 
