Made jQuery a dev dependency.

--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -95,7 +95,7 @@
 	</div>
 
 	<script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-	<script src="../../dist/js/bootstrap-slider.min.js"></script>
+	<script src="../../dist/js/bootstrap-slider.js"></script>
 	<script src="sample.js"></script>
 
 </body>
