--- a/examples/globals/index.html
+++ b/examples/globals/index.html
@@ -38,6 +38,11 @@
 						<input type="slider" value="" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10">
 					</li>
 					<li class="list-group-item">
+						<h3>Locked Range Selection</h3>
+						<p>Value: 0-0, step:0, initial value: 0</p>
+						<input type="slider" value="0,0" data-slider-min="0" data-slider-max="0" data-slider-step="0" data-slider-value="0">
+					</li>
+					<li class="list-group-item">
 						<h3>Single Selection</h3>
 						<p>Width: 100%, Value: 0-100, step: 5, initial value: 10</p>
 						<input type="slider" value="" data-slider-width="100%" data-slider-min="0" data-slider-max="100" data-slider-step="5" data-slider-value="10">
