Fix for issue #1.
Also updated CSS for custom handles.

--- a/examples/amd/index.html
+++ b/examples/amd/index.html
@@ -72,6 +72,11 @@
 						<input type="slider" value="0,0" data-slider-min="0" data-slider-max="200" data-slider-step="6" data-slider-value="[0,0]">
 					</li>
 					<li class="list-group-item">
+						<h3>Range Selection (2 year range)</h3>
+						<p>Range 2015-2016, step: 1, initial range: 2016 : 2016</p>
+						<input type="slider" value="2016,2016" data-slider-min="2015" data-slider-max="2016" data-slider-step="1" data-slider-value="[2016,2016]">
+					</li>
+					<li class="list-group-item">
 						<h3>Single Selection (Vertical)</h3>
 						<p>Orientation: vertical, Value: 0-100, step: 5, initial value: 10</p>
 						<input type="slider" value="" data-slider-orientation="vertical" data-slider-min="0" data-slider-max="100" data-slider-step="5"
